first fix column alignment

--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ div {
   background-color: rgb(207, 96, 52);
   padding-top: 5rem;
   padding-bottom: 5rem;
+  padding-left: 3rem;
 }
 
 h1 {
@@ -145,20 +146,22 @@ h4 {
   font-optical-sizing: auto;
   font-style: normal;
   line-height: 1.3;
+  text-transform: uppercase;
 }
 
 .h4-end {
-  color: rgb(55, 55, 55);
+  color: rgb(148, 107, 55);
   font-size: 15px; /* Sets base font size for the body */
   font-weight: 500;
   font-family: "Google Sans Code", monospace;
   font-optical-sizing: auto;
   font-style: normal;
   line-height: 1.3;
-  float: right;
+  float: left;
   padding-top: 2rem;
   padding-bottom: 2rem;
   padding-right: 3rem;
+  text-transform: uppercase;
 }
 
 p {
@@ -279,3 +282,9 @@ a {
 }
 
 /* ˏˋ°•*⁀➷ ˏˋ°•*⁀➷ ˏˋ°•*⁀➷ */
+
+.parent-container {
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+}
